# stocksage

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  alembic.ini  config.py  pyproject.toml
alembic/: env.py
alembic/versions/: 58f29d25c05c_initial_schema.py  6e5c0b2d1a44_user_identity_request_history.py  8adcb5d6f3d4_queue_job_state.py  b7a8d2e1c4f3_queue_runs.py
api/: __init__.py  app.py  deps.py  services.py  templates.py
api/routes/: __init__.py  web.py
cli/: main.py
core/: analysis_runs.py  analyzer.py  db.py  memory_sync.py  models.py  outcomes.py  queue_runs.py  queueing.py  request_history.py  submissions.py  trends.py  users.py
docs/: 01-milestone.md  02-milestone.md  03-milestone.md  04-milestone.md  05-milestone.md  06-milestone.md  06-ui-design.md  07-milestone.md  08-milestone.md  aiworkspace-plan.md  development.md  getting-started.md  plan.md
stocksage/: __init__.py  cli.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_cli.py  test_memory_sync.py  test_migrations.py  test_models.py  test_outcomes.py  test_queue_runs.py  test_queueing.py  test_trends.py  test_users.py  test_web_runner.py  test_worker.py
web/static/: app.js  charts.js  styles.css
web/templates/: analysis.html  base.html  queue.html  research.html  ticker.html  workspace.html
web/templates/macros/: help.html
web/templates/partials/: queue_jobs.html  queue_runner.html  research_tickers.html  reuse_note.html  workspace_submissions.html
worker/: runner.py  web_runner.py
