[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stocksage"
version = "0.1.0"
description = "LLM-powered stock analysis with persistent history and trend tracking"
requires-python = ">=3.11"
dependencies = [
    # TradingAgents must be installed as a local editable:
    #   pip install -e /Users/spuri/projects/TradingAgents
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "click>=8.1",
    "python-dotenv>=1.0",
    "yfinance>=0.2",
    "tabulate>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.scripts]
stocksage = "cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
