[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stocksage"
version = "0.0.2"
description = "LLM-powered stock analysis with persistent history and trend tracking"
requires-python = ">=3.11"
dependencies = [
    "tradingagents @ git+https://github.com/TauricResearch/TradingAgents",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "click>=8.1",
    "python-dotenv>=1.0",
    "yfinance>=0.2",
    "tabulate>=0.9",
    "rich>=13.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
stocksage = "stocksage.cli:cli"

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "SIM",
    "UP",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
